--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,13 +1,4 @@
-/Boats
-/Duplicates
-/Empty
 /IO/
-/LogicalOperator/
+/Indexing/
 /Operators/
 /Project/
-/Reserves
-/Sailors
-/SortTest
-/SortedBoats
-/SortedDuplicates
-/Testing/
