--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,15 @@
-/Project/
-/Operators/
-/Testing/
+/BoatsBin
+/CostPlan/
+/Duplicates
+/Empty
 /IO/
 /Indexing/
 /LogicalOperator/
-/CostPlan/
+/Operators/
+/Project/
+/Reserves
+/Sailors
+/SailorsBin
+/SortTest
+/SortedBoats
+/SortedDuplicates
